--- a/java/lolDome/pom.xml
+++ b/java/lolDome/pom.xml
@@ -46,6 +46,16 @@
       <artifactId>spring-aspects</artifactId>
       <version>5.1.5.RELEASE</version>
     </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.5</version>
+      </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+    </dependency>
   </dependencies>
 
   <build>
